Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-26900

OSX MaintenanceTool.app Info.plist contains wrong value for CFBundleExecutable

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 5.0.0 Beta 2
    • 5.0.0 Beta 1
    • Packaging & Installer
    • None
    • Mac OSX 10.7.4
    • macOS
    • 33d649f07a32a8d1b165b322ebbf8b28bed20d41, 4767575f303a65ce7e7b7010db559729168f61b6

    Description

      Double click MaintenanceTool.app in Qt5.0.0beta1 installation directory. The message about "You can't open the application because it may be damaged or incomplete." appears.

      Looking at the Info.plist file in MaintenanceTool.app/Contents/Info.plist shows wrong CFBundleExecutable value for the application:

      <key>CFBundleExecutable</key>
      <string>qt-mac-opensource-5.0.0-beta1-offline</string>

      Correct value is MaintenanceTool.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            teemukat Teemu Katajisto (Inactive)
            teemukat Teemu Katajisto (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes