installer: fix replacing executable name in Mac

Installer executable filename does not have suffix so
use the whole file name as search string when
updating the maintenance tool Info.plist file.

Task-number: QTBUG-26900

Change-Id: I8fd7c981fa9490fc1882b78ec08da81c59dc7428
Reviewed-by: Niels Weber <niels.weber@digia.com>
Reviewed-by: Tim Jenssen <tim.jenssen@digia.com>